Make sure the paragraph content in the notification content is always left aligned.

--- a/resources/css/oc.css
+++ b/resources/css/oc.css
@@ -526,6 +526,10 @@ span.oc-mention {
   border-bottom-right-radius: 6px;
 }
 
+.note-paragraph {
+  text-align: left;
+}
+
 .note-paragraph p {
   margin-left: 24px;
   margin-right: 24px;
